数据库连接测试

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,6 +132,7 @@ dependencies {
     compile (name: "xwalk_core_library-18.48.477.13", ext: "aar")    // <--- add this line
     compile project(':CrosswalkWebView')                             // <--- add this line
     compile project(':react-native-splashscreen') 
+    compile project(':react-native-sqlite-storage')
     
 }
 
