--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-android-statusbar": "0.1.2",
     "react-native-material-design": "0.3.6",
     "react-native-material-kit": "0.3.2",
+    "react-native-sqlite-storage": "^3.1.1",
     "react-native-webview-android": "1.1.6",
     "react-native-webview-crosswalk": "file:./node_modules/react-native-webview-crosswalk"
   }
