--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -6,3 +6,6 @@ project(':CrosswalkWebView').projectDir = new File(rootProject.projectDir, '../n
 
 include ':react-native-splashscreen'
 project(':react-native-splashscreen').projectDir = new File(rootProject.projectDir, '../node_modules/@remobile/react-native-splashscreen/android')
+
+include ':react-native-sqlite-storage'
+project(':react-native-sqlite-storage').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sqlite-storage/src/android')
